--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
   "name": "cra-template-empty-sass",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3"
+  "version": "1.0.0",
+  "keywords": [
+    "react",
+    "create-react-app",
+    "template",
+    "react-sass"
+  ],
+  "description": "Empty React app with Sass",
+  "main": "template.json"
+},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daniel-ulises/cra-template-node-sass/",
+    "directory": "/"
+},
+  "license": "MIT",
+  "engines": {
+    "node": ">=10"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "files": [
+    "template",
+    "template.json"
+  ]
+},
+"devDependencies": {
+    "sass"
 }
